# azure-iot-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  Dockerfile.out_of_tree_build_example  Dockerfile.out_of_tree_build_example_apt_get  IOT Hub CSR.txt  README-ForMiCO.txt  SECURITY.MD  Update-AzIoTSdkCSubmodules.ps1  agenttime_8h.html  agenttime_8h_source.html  annotated.html  azure__base64_8h.html  azure__base64_8h_source.html  base64_8h.html  base64_8h_source.html  classes.html  dependencies.cmake  deprecated.html  dir_06ad3547f3d86a1ec8476a1a095d0c7d.html  dir_114d63ea2533d2a896664dbc048adba3.html  dir_1694c13933cdc92f342b68cada1a93ed.html  dir_5ce63b9b4c2e2aac9217eda7270a705f.html  dir_66e87b1b6982e486b12ddb87d035cc3e.html  dir_744ac10e7cceb21d125426828b6abbbc.html  dir_83130228ed9502199ba05eab3ce939c7.html  dir_9830f64a85b25f11f91ba67750081b54.html  dir_bbe620402062632feedac03afa1827cc.html  dir_c3358e6f366aea159d1cbed6c4abea1b.html  dir_cd0f3ed9eb634c645b94394b44025efb.html  dir_cd0fdfd972c77c2c2b492c5cced875ac.html  dir_e4d0e6c8e1e55755c3e8205d0fff48d1.html  dir_e5bf135a271e380926093d33be3d41d3.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_e9d314d6a2a19b23731885c00ae46b17.html  dir_fd0caf73a87b01a9adf507a287aab0a9.html  dir_fe0b10043ec043eaf763cb6bad96c3bc.html  (+111 more)
digitaltwin_client/: CMakeLists.txt  readme.md
digitaltwin_client/doc/: building_sdk.md  connection_setup.md  data_format.md  interfaces.md  readme.md  threading_notes.md  where_is_c_service_sdk.md
digitaltwin_client/inc/: digitaltwin_client_common.h  digitaltwin_client_version.h  digitaltwin_device_client.h  digitaltwin_device_client_ll.h  digitaltwin_interface_client.h  digitaltwin_model_definition.h  readme.md
digitaltwin_client/samples/: CMakeLists.txt  SampleDevice.capabilitymodel.json  SampleDevice.model.json  readme.md
digitaltwin_client/src/: digitaltwin_client_dll.def  dt_client_core.c  dt_device.c  dt_device_ll.c  dt_interface_client.c  dt_interface_list.c  dt_lock_thread_binding_impl.c  dt_lock_thread_binding_stub.c  dt_model_definition.c  dt_version.c
digitaltwin_client/tests/: CMakeLists.txt  readme.md
dps_client/: CMakeLists.txt
dps_client/adapters/: custom_hsm_tpm_impl.h  custom_hsm_x509_impl.h  dps_hsm_riot.c  dps_hsm_riot.h  dps_hsm_tpm.c  dps_hsm_tpm.h  dps_tpm_template.c  dps_tpm_template.h  dps_x509_template.c  dps_x509_template.h  iothub_security_sas.c  iothub_security_sas.h  iothub_security_x509.c  iothub_security_x509.h
dps_client/devdoc/: dps_custom_hsm.md  using_dps_module.md
dps_client/samples/: CMakeLists.txt
dps_client/src/: base32.c  dps_client.c  dps_sasl_tpm.c  dps_sec_client.c  dps_transport_amqp_client.c  dps_transport_amqp_common.c  dps_transport_amqp_ws_client.c  dps_transport_http_client.c  dps_transport_mqtt_client.c  dps_transport_mqtt_common.c  dps_transport_mqtt_ws_client.c  iothub_device_auth.c  iothub_security_factory.c  sec_device_module_tpm.c  secure_device_factory.c  secure_device_tpm.c  uhttp.c
dps_client/tests/: CMakeLists.txt
dps_client/tools/: CMakeLists.txt
dps_service_client/: CMakeLists.txt
dps_service_client/inc/: dps_sc_client.h  dps_sc_enrollment.h
dps_service_client/samples/: CMakeLists.txt
dps_service_client/src/: dps_sc_client.c  dps_sc_enrollment.c  dps_service_client.c
dps_service_client/tests/: CMakeLists.txt
iothub_client/: CMakeLists.txt  readme.md
iothub_client/devdoc/: iothubclient_c_library.md  iothubclient_message_callback_ex_uml.vsdx  sample_issues_template.md
iothub_client/inc/: blob.h  iothub.h  iothub_client.h  iothub_client_authorization.h  iothub_client_common.h  iothub_client_core.h  iothub_client_core_common.h  iothub_client_core_ll.h  iothub_client_diagnostic.h  iothub_client_dps_ll.h  iothub_client_edge.h  iothub_client_hsm_ll.h  iothub_client_ll.h  iothub_client_ll_edge.h  iothub_client_ll_uploadtoblob.h  iothub_client_options.h  iothub_client_private.h  iothub_client_properties.h  iothub_client_retry_control.h  iothub_client_streaming.h  iothub_client_version.h  iothub_device_client.h  iothub_device_client_ll.h  iothub_message.h  iothub_module_client.h  iothub_module_client_ll.h  iothub_pnp.h  iothub_properties.h  iothub_prov_amqp_transport.h  iothub_prov_amqp_ws_transport.h  iothub_prov_http_transport.h  iothub_prov_mqtt_transport.h  iothub_prov_mqtt_ws_transport.h  iothub_prov_transport.h  iothub_transport_ll.h  iothubtransport.h  iothubtransport_amqp_cbs_auth.h  iothubtransport_amqp_common.h  iothubtransport_amqp_connection.h  iothubtransport_amqp_device.h  (+10 more)
iothub_client/samples/: CMakeLists.txt  readme.md
iothub_client/src/: blob.c  blob_uhttp.c  iothub.c  iothub_client.c  iothub_client.def  iothub_client_authorization.c  iothub_client_core.c  iothub_client_core_ll.c  iothub_client_diagnostic.c  iothub_client_dll.def  iothub_client_dll_no_upload.def  iothub_client_edge.c  iothub_client_ll.c  iothub_client_ll_edge.c  iothub_client_ll_uploadtoblob.c  iothub_client_ll_uploadtoblob_uhttp.c  iothub_client_properties.c  iothub_client_retry_control.c  iothub_client_streaming.c  iothub_client_transport_no_upload_template.def  iothub_client_transport_template.def  iothub_device_client.c  iothub_device_client_ll.c  iothub_edge_modules.def  iothub_message.c  iothub_module_client.c  iothub_module_client_ll.c  iothub_pnp.c  iothub_properties.c  iothub_prov_amqp_transport.c  iothub_prov_amqp_ws_transport.c  iothub_prov_http_transport.c  iothub_prov_mqtt_transport.c  iothub_prov_mqtt_ws_transport.c  iothub_transport_amqp.def  iothub_transport_http.def  iothub_transport_ll_private.c  iothub_transport_mqtt.def  iothubtransport.c  iothubtransport_amqp_cbs_auth.c  (+19 more)
iothub_client/tests/: CMakeLists.txt  global_valgrind_suppression.supp
iothub_service_client/: CMakeLists.txt  readme.md
iothub_service_client/inc/: iothub_deviceconfiguration.h  iothub_devicemethod.h  iothub_devicetwin.h  iothub_message_monitoring.h  (+8 more)
provisioning_client/: CMakeLists.txt
provisioning_service_client/: CMakeLists.txt  readme.md
serializer/: CMakeLists.txt  readme.md
(+4208 files in other folders)
